--- a/lab-00.Rmd
+++ b/lab-00.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Lab 00 - Hello IDS!"
-author: "INSERT YOUR NAME HERE"
-date: "`r Sys.Date()`"
+author: "Cameron"
+date: "`22/09/2023`"
 output: html_document
 ---
 
