--- a/lab-00.Rmd
+++ b/lab-00.Rmd
@@ -17,15 +17,15 @@ We set up the data frame. Edit the data below to include information about your 
 
 ```{r setup-tibble}
 team_data <- tibble(
-  name = c("Peter Rabbit", "member 1", "member 2", 
-           "member 3", "member 4"),
-  github_username = c("mcgregors-garden", "username 1", "username 2", 
-                      "username 3", "username 4"), 
-  colour = c("powderblue", "colour 1", "colour 2", 
-             "colour 3", "colour 4"),
-  hobby = c("Hopping", "hobby 1", "hobby 2", 
-            "hobby 3", "hobby 4"),
-  favourite_number = c(2, NA, NA, NA, NA)
+  name = c("Cameron", "Connor", "Max", 
+           "Ade", "Murray"),
+  github_username = c("ca3eron", "con-fin", "s2487351", 
+                      "Ade8734", "MurrayBone"), 
+  colour = c("royalblue", "lightsteelblue1", "blue", 
+             "orange", "lightblue"),
+  hobby = c("Photography", "Drumming", "Chess", 
+            "Basketball", "Row"),
+  favourite_number = c(4, 9, 7, 5, 2)
   )
 
 team_data
@@ -54,12 +54,10 @@ p1
 Change the text of the plot title and axis labels.
 
 ```{r labelled-bar-plot}
-p1 + labs(x = "Insert text here", 
-          y = "Insert text here",
-          title = "Insert text here")
+p1 + labs(x = "github_username", 
+          y = "favourite_number",
+          title = "Group Information")
 ```
-
-*Remove this text (including the stars), and add your answer for Exercise 19 here.*
 
 ### Exercise 20
 
